@@ -92,7 +92,12 @@
 #endif
 
 #ifdef HAVE_WCHAR_H
-/* Ugly hack for OpenBSD. There should be better way... */
+/*
+ * The following is ugly hack for OpenBSD 3.8 (and perhaps earlier versions).
+ * There should be a better way... If you get compile error for mbstate_t on
+ * OpenBSD 3.8 (and earlier versions), uncomment the following code.
+ */
+/*
 # ifdef OS_OPENBSD
 typedef unsigned int    _our_wint_t;
 typedef struct {
@@ -102,7 +107,8 @@ typedef struct {
 		char		__wchb[4]
 	} __value;
 } mbstate_t;
-# endif	/* OS_OPENBSD */
+# endif
+*/
 # include <wchar.h>
 #endif
 
@@ -1594,7 +1600,7 @@ struct rxvt_hidden {
     XComposeStatus	compose;
     row_col_t		oldcursor;
 #ifdef MULTICHAR_SET
-    int				oldcursormulti;
+    signed int		oldcursormulti;
 #endif
     void			(*multichar_decode)(unsigned char *str, int len);
 #ifdef HAVE_MENUBAR
